tests/fixtures/fail/box_direct_construct.sali
let main(): i32 = {
  let pointer = unsafe do {
    raw_alloc(i32)(size_of(i32), align_of(i32))
  }
  let boxed = Box(i32)(pointer: pointer)
  0
}
